--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
   },
   "peerDependencies": {
     "react": "^18.0.0",
-    "ink": "^4.4.1"
+    "ink": "^4.4.1",
+    "ink-spinner": "^5.0.0"
   },
   "dependencies": {
-    "chalk": "^5.3.0",
-    "ink-spinner": "^5.0.0"
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
+    "react-devtools-core": "^6.1.2",
     "typescript": "^5.3.0"
   },
   "engines": {
